fix the overflow on thank you page

--- a/src/components/CampaignLanding/ThankYouPage/ThankYouPage.module.scss
+++ b/src/components/CampaignLanding/ThankYouPage/ThankYouPage.module.scss
@@ -108,7 +108,8 @@
   justify-content: center;
   gap: 109px;
   margin: 0 auto;
-  width: 1076px;
+  max-width: 1076px;
+  width: 100%;
   border-radius: 8px;
   border: 1px solid var(--UI-Gray-300, #d1d5db);
   padding: 23px 40px;
